# grpc_python_typescript

./: .gitignore  buf.gen.yaml  update_proto.sh
proto/: test.proto
python/: pyproject.toml  test_client.py  test_pb2.py  test_pb2.pyi  test_pb2_grpc.py  test_server.py
python/proto/: test_pb2.py  test_pb2_grpc.py
typescript/: index.ts  package-lock.json  package.json  test_grpc_pb.d.ts  test_pb.d.ts  tsconfig.json
typescript/proto/: test_connect.d.ts  test_pb.d.ts
